--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "16.0.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0"
   },
